Fix line break on mobile

--- a/assets/sass/abstracts/_mixins.scss
+++ b/assets/sass/abstracts/_mixins.scss
@@ -1,7 +1,7 @@
 // Breakpoints
 
 @mixin atSmall {
-  @media (min-width: 480px) {
+  @media (min-width: 500px) {
     @content;
   }
 }
